--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -6,12 +6,12 @@
     <div class="row">
       <div class="col-md-2">Filter by:</div>
       <div class="col-md-4">
-        <input type="text" />
+        <input type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <h4>Filtered by:</h4>
+        <h4>Filtered by: {{listFilter}}</h4>
       </div>
     </div>
     <div class="table-responsive">
@@ -19,7 +19,8 @@
         <thead>
           <tr>
             <th>
-              <button class="btn btn-primary">Show Image</button>
+              <button (click)="toggleImage($event)"
+              class="btn btn-primary">{{imageToggleText}}</button>
             </th>
             <th>Product</th>
             <th>Code</th>
@@ -29,12 +30,16 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
-            <td></td>
+          <tr *ngFor="let product of filteredProducts">
+            <td><img *ngIf="showImage"
+                  [src]="product.imageUrl"
+                  [title]="product.productName | uppercase"
+                    [style.width.px]="imageWidth"
+                    [style.margin.px]="imageMargin"></td>
             <td>{{ product.productName }}</td>
-            <td>{{ product.productCode }}</td>
+            <td>{{ product.productCode | lowercase | convertToSpaces:"-" }}</td>
             <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price }}</td>
+            <td>{{ product.price | currency:"GBP":"symbol":"1.2-2" }}</td>
             <td>{{ product.starRating }}</td>
           </tr>
           <!-- <tr *ngFor='let product of filteredProducts'>
